src/cwlexParser.js
// Generated from /tmp/tmpte19dkck/stgc6bf9231-d979-4151-b9f5-c16dedd81bb9/cwlex.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var cwlexListener = require('./cwlexListener').cwlexListener;
var grammarFileName = "cwlex.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'$'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "':'", "','", "'='", "'?'", "'\n'", "'>'", "'<'", null, 
                     null, "'<<<\n'", "'>>>\n'", null, null, null, null, 
                     null, "'workflow'", "'tool'", "'File'", "'Directory'", 
                     "'stdout'", "'for'", "'each'", "'in'", "'def'", "'run'", 
                     "'return'", "'struct'", "'using'", "'merge_nested'", 
                     "'merge_flattened'", "'string'", "'int'", "'float'", 
                     "'boolean'", "'requirements'", "'hints'", "'import'", 
                     "'as'", "'do'", "'scatter'", "'expr'", "'true'", "'false'" ];

var symbolicNames = [ null, "DOLLAR", "OPENPAREN", "CLOSEPAREN", "OPENBRACE", 
                      "CLOSEBRACE", "OPENBRACKET", "CLOSEBRACKET", "COLON", 
                      "COMMA", "EQ", "QUES", "NEWLINE", "GREATER", "LESSER", 
                      "SPACE", "COMMENT", "OPENSCRIPT", "CLOSESCRIPT", "SQSTRING", 
                      "DQSTRING", "BQSTRING", "FLOAT", "INTEGER", "WORKFLOW", 
                      "TOOL", "FILE", "DIRECTORY", "STDOUT", "FOR", "EACH", 
                      "IN", "DEF", "RUN", "RETURN", "STRUCT", "USING", "MERGE_NESTED", 
                      "MERGE_FLATTENED", "STRING", "INT_SYMBOL", "FLOAT_SYMBOL", 
                      "BOOLEAN_SYMBOL", "REQUIREMENTS", "HINTS", "IMPORT", 
                      "AS", "DO", "SCATTER", "EXPR", "TRUE_SYMBOL", "FALSE_SYMBOL", 
                      "NOTWS" ];

var ruleNames =  [ "root", "javascript", "jsstring", "jsexpr", "jsblock", 
                   "jslist", "workflowdecl", "tooldecl", "req_decl", "reqs", 
                   "workflowbodyStatement", "workflowbody", "symbolassign", 
                   "symbolassignlist", "linkmerge", "typedexpr", "inlineexpr", 
                   "steprun", "step", "scatter", "inlinetool", "inlineworkflowbody", 
                   "inlineworkflow", "call", "stepinputSourceOrValue", "stepinput", 
                   "stepinputs", "scriptlines", "scriptbody", "freetext", 
                   "line", "argument", "redirect", "command", "const_string", 
                   "file_const", "dir_const", "struct_field_name", "struct_field", 
                   "struct_const", "list_entry", "list_const", "const_value", 
                   "const_assignment", "output_assignment", "optional_for_bind", 
                   "optional_for_over", "optional_arg", "returnvar", "toolbody", 
                   "name", "structdecl", "typekeyword", "typedecl", "input_params", 
                   "param_list", "param_decl", "symbolpart", "symbol", "import_decl", 
                   "exprdecl", "ws", "keyword" ];

function cwlexParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

cwlexParser.prototype = Object.create(antlr4.Parser.prototype);
cwlexParser.prototype.constructor = cwlexParser;

Object.defineProperty(cwlexParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

cwlexParser.EOF = antlr4.Token.EOF;
cwlexParser.DOLLAR = 1;
cwlexParser.OPENPAREN = 2;
cwlexParser.CLOSEPAREN = 3;
cwlexParser.OPENBRACE = 4;
cwlexParser.CLOSEBRACE = 5;
cwlexParser.OPENBRACKET = 6;
cwlexParser.CLOSEBRACKET = 7;
cwlexParser.COLON = 8;
cwlexParser.COMMA = 9;
cwlexParser.EQ = 10;
cwlexParser.QUES = 11;
cwlexParser.NEWLINE = 12;
cwlexParser.GREATER = 13;
cwlexParser.LESSER = 14;
cwlexParser.SPACE = 15;
cwlexParser.COMMENT = 16;
cwlexParser.OPENSCRIPT = 17;
cwlexParser.CLOSESCRIPT = 18;
cwlexParser.SQSTRING = 19;
cwlexParser.DQSTRING = 20;
cwlexParser.BQSTRING = 21;
cwlexParser.FLOAT = 22;
cwlexParser.INTEGER = 23;
cwlexParser.WORKFLOW = 24;
cwlexParser.TOOL = 25;
cwlexParser.FILE = 26;
cwlexParser.DIRECTORY = 27;
cwlexParser.STDOUT = 28;
cwlexParser.FOR = 29;
cwlexParser.EACH = 30;
cwlexParser.IN = 31;
cwlexParser.DEF = 32;
cwlexParser.RUN = 33;
cwlexParser.RETURN = 34;
cwlexParser.STRUCT = 35;
cwlexParser.USING = 36;
cwlexParser.MERGE_NESTED = 37;
cwlexParser.MERGE_FLATTENED = 38;
cwlexParser.STRING = 39;
cwlexParser.INT_SYMBOL = 40;
cwlexParser.FLOAT_SYMBOL = 41;
cwlexParser.BOOLEAN_SYMBOL = 42;
cwlexParser.REQUIREMENTS = 43;
cwlexParser.HINTS = 44;
cwlexParser.IMPORT = 45;
cwlexParser.AS = 46;
cwlexParser.DO = 47;
cwlexParser.SCATTER = 48;
cwlexParser.EXPR = 49;
cwlexParser.TRUE_SYMBOL = 50;
cwlexParser.FALSE_SYMBOL = 51;
cwlexParser.NOTWS = 52;

cwlexParser.RULE_root = 0;
cwlexParser.RULE_javascript = 1;
cwlexParser.RULE_jsstring = 2;
cwlexParser.RULE_jsexpr = 3;
cwlexParser.RULE_jsblock = 4;
cwlexParser.RULE_jslist = 5;
cwlexParser.RULE_workflowdecl = 6;
cwlexParser.RULE_tooldecl = 7;
cwlexParser.RULE_req_decl = 8;
cwlexParser.RULE_reqs = 9;
cwlexParser.RULE_workflowbodyStatement = 10;
cwlexParser.RULE_workflowbody = 11;
cwlexParser.RULE_symbolassign = 12;
cwlexParser.RULE_symbolassignlist = 13;
cwlexParser.RULE_linkmerge = 14;
cwlexParser.RULE_typedexpr = 15;
cwlexParser.RULE_inlineexpr = 16;
cwlexParser.RULE_steprun = 17;
cwlexParser.RULE_step = 18;
cwlexParser.RULE_scatter = 19;
cwlexParser.RULE_inlinetool = 20;
cwlexParser.RULE_inlineworkflowbody = 21;
cwlexParser.RULE_inlineworkflow = 22;
cwlexParser.RULE_call = 23;
cwlexParser.RULE_stepinputSourceOrValue = 24;
cwlexParser.RULE_stepinput = 25;
cwlexParser.RULE_stepinputs = 26;
cwlexParser.RULE_scriptlines = 27;
cwlexParser.RULE_scriptbody = 28;
cwlexParser.RULE_freetext = 29;
cwlexParser.RULE_line = 30;
cwlexParser.RULE_argument = 31;
cwlexParser.RULE_redirect = 32;
cwlexParser.RULE_command = 33;
cwlexParser.RULE_const_string = 34;
cwlexParser.RULE_file_const = 35;
cwlexParser.RULE_dir_const = 36;
cwlexParser.RULE_struct_field_name = 37;
cwlexParser.RULE_struct_field = 38;
cwlexParser.RULE_struct_const = 39;
cwlexParser.RULE_list_entry = 40;
cwlexParser.RULE_list_const = 41;
cwlexParser.RULE_const_value = 42;
cwlexParser.RULE_const_assignment = 43;
cwlexParser.RULE_output_assignment = 44;
cwlexParser.RULE_optional_for_bind = 45;
cwlexParser.RULE_optional_for_over = 46;
cwlexParser.RULE_optional_arg = 47;
cwlexParser.RULE_returnvar = 48;
cwlexParser.RULE_toolbody = 49;
cwlexParser.RULE_name = 50;
cwlexParser.RULE_structdecl = 51;
cwlexParser.RULE_typekeyword = 52;
cwlexParser.RULE_typedecl = 53;
cwlexParser.RULE_input_params = 54;
cwlexParser.RULE_param_list = 55;
cwlexParser.RULE_param_decl = 56;
cwlexParser.RULE_symbolpart = 57;
cwlexParser.RULE_symbol = 58;
cwlexParser.RULE_import_decl = 59;
cwlexParser.RULE_exprdecl = 60;
cwlexParser.RULE_ws = 61;
cwlexParser.RULE_keyword = 62;

function RootContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cwlexParser.RULE_root;
    return this;
}

RootContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RootContext.prototype.constructor = RootContext;

RootContext.prototype.workflowdecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WorkflowdeclContext);
    } else {
        return this.getTypedRuleContext(WorkflowdeclContext,i);
    }
};

RootContext.prototype.tooldecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TooldeclContext);
    } else {
        return this.getTypedRuleContext(TooldeclContext,i);
    }
};

RootContext.prototype.import_decl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Import_declContext);
    } else {
        return this.getTypedRuleContext(Import_declContext,i);
    }
};

RootContext.prototype.exprdecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprdeclContext);
    } else {
        return this.getTypedRuleContext(ExprdeclContext,i);
    }
};

RootContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

RootContext.prototype.enterRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.enterRoot(this);
	}
};

RootContext.prototype.exitRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.exitRoot(this);
	}
};




cwlexParser.RootContext = RootContext;

cwlexParser.prototype.root = function() {

    var localctx = new RootContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, cwlexParser.RULE_root);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 131; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 131;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
            switch(la_) {
            case 1:
                this.state = 126;
                this.workflowdecl();
                break;

            case 2:
                this.state = 127;
                this.tooldecl();
                break;

            case 3:
                this.state = 128;
                this.import_decl();
                break;

            case 4:
                this.state = 129;
                this.exprdecl();
                break;

            case 5:
                this.state = 130;
                this.ws();
                break;

            }
            this.state = 133; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << cwlexParser.NEWLINE) | (1 << cwlexParser.SPACE) | (1 << cwlexParser.COMMENT))) !== 0) || _la===cwlexParser.DEF || _la===cwlexParser.IMPORT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function JavascriptContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cwlexParser.RULE_javascript;
    return this;
}

JavascriptContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JavascriptContext.prototype.constructor = JavascriptContext;

JavascriptContext.prototype.jsstring = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(JsstringContext);
    } else {
        return this.getTypedRuleContext(JsstringContext,i);
    }
};

JavascriptContext.prototype.jsexpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(JsexprContext);
    } else {
        return this.getTypedRuleContext(JsexprContext,i);
    }
};

JavascriptContext.prototype.jsblock = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(JsblockContext);
    } else {
        return this.getTypedRuleContext(JsblockContext,i);
    }
};

JavascriptContext.prototype.jslist = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(JslistContext);
    } else {
        return this.getTypedRuleContext(JslistContext,i);
    }
};

JavascriptContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

JavascriptContext.prototype.DOLLAR = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.DOLLAR);
    } else {
        return this.getToken(cwlexParser.DOLLAR, i);
    }
};


JavascriptContext.prototype.COLON = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.COLON);
    } else {
        return this.getToken(cwlexParser.COLON, i);
    }
};


JavascriptContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.COMMA);
    } else {
        return this.getToken(cwlexParser.COMMA, i);
    }
};


JavascriptContext.prototype.EQ = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.EQ);
    } else {
        return this.getToken(cwlexParser.EQ, i);
    }
};


JavascriptContext.prototype.QUES = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.QUES);
    } else {
        return this.getToken(cwlexParser.QUES, i);
    }
};


JavascriptContext.prototype.GREATER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.GREATER);
    } else {
        return this.getToken(cwlexParser.GREATER, i);
    }
};


JavascriptContext.prototype.LESSER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.LESSER);
    } else {
        return this.getToken(cwlexParser.LESSER, i);
    }
};


JavascriptContext.prototype.COMMENT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.COMMENT);
    } else {
        return this.getToken(cwlexParser.COMMENT, i);
    }
};


JavascriptContext.prototype.FLOAT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.FLOAT);
    } else {
        return this.getToken(cwlexParser.FLOAT, i);
    }
};


JavascriptContext.prototype.INTEGER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.INTEGER);
    } else {
        return this.getToken(cwlexParser.INTEGER, i);
    }
};


JavascriptContext.prototype.keyword = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(KeywordContext);
    } else {
        return this.getTypedRuleContext(KeywordContext,i);
    }
};

JavascriptContext.prototype.NOTWS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cwlexParser.NOTWS);
    } else {
        return this.getToken(cwlexParser.NOTWS, i);
    }
};


JavascriptContext.prototype.enterRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.enterJavascript(this);
	}
};

JavascriptContext.prototype.exitRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.exitJavascript(this);
	}
};




cwlexParser.JavascriptContext = JavascriptContext;

cwlexParser.prototype.javascript = function() {

    var localctx = new JavascriptContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, cwlexParser.RULE_javascript);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 154;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1+1) {
                this.state = 152;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
                switch(la_) {
                case 1:
                    this.state = 135;
                    this.jsstring();
                    break;

                case 2:
                    this.state = 136;
                    this.jsexpr();
                    break;

                case 3:
                    this.state = 137;
                    this.jsblock();
                    break;

                case 4:
                    this.state = 138;
                    this.jslist();
                    break;

                case 5:
                    this.state = 139;
                    this.ws();
                    break;

                case 6:
                    this.state = 140;
                    this.match(cwlexParser.DOLLAR);
                    break;

                case 7:
                    this.state = 141;
                    this.match(cwlexParser.COLON);
                    break;

                case 8:
                    this.state = 142;
                    this.match(cwlexParser.COMMA);
                    break;

                case 9:
                    this.state = 143;
                    this.match(cwlexParser.EQ);
                    break;

                case 10:
                    this.state = 144;
                    this.match(cwlexParser.QUES);
                    break;

                case 11:
                    this.state = 145;
                    this.match(cwlexParser.GREATER);
                    break;

                case 12:
                    this.state = 146;
                    this.match(cwlexParser.LESSER);
                    break;

                case 13:
                    this.state = 147;
                    this.match(cwlexParser.COMMENT);
                    break;

                case 14:
                    this.state = 148;
                    this.match(cwlexParser.FLOAT);
                    break;

                case 15:
                    this.state = 149;
                    this.match(cwlexParser.INTEGER);
                    break;

                case 16:
                    this.state = 150;
                    this.keyword();
                    break;

                case 17:
                    this.state = 151;
                    this.match(cwlexParser.NOTWS);
                    break;

                } 
            }
            this.state = 156;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function JsstringContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cwlexParser.RULE_jsstring;
    return this;
}

JsstringContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JsstringContext.prototype.constructor = JsstringContext;

JsstringContext.prototype.SQSTRING = function() {
    return this.getToken(cwlexParser.SQSTRING, 0);
};

JsstringContext.prototype.DQSTRING = function() {
    return this.getToken(cwlexParser.DQSTRING, 0);
};

JsstringContext.prototype.BQSTRING = function() {
    return this.getToken(cwlexParser.BQSTRING, 0);
};

JsstringContext.prototype.enterRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.enterJsstring(this);
	}
};

JsstringContext.prototype.exitRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.exitJsstring(this);
	}
};




cwlexParser.JsstringContext = JsstringContext;

cwlexParser.prototype.jsstring = function() {

    var localctx = new JsstringContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, cwlexParser.RULE_jsstring);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 157;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << cwlexParser.SQSTRING) | (1 << cwlexParser.DQSTRING) | (1 << cwlexParser.BQSTRING))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function JsexprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cwlexParser.RULE_jsexpr;
    return this;
}

JsexprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JsexprContext.prototype.constructor = JsexprContext;

JsexprContext.prototype.OPENPAREN = function() {
    return this.getToken(cwlexParser.OPENPAREN, 0);
};

JsexprContext.prototype.javascript = function() {
    return this.getTypedRuleContext(JavascriptContext,0);
};

JsexprContext.prototype.CLOSEPAREN = function() {
    return this.getToken(cwlexParser.CLOSEPAREN, 0);
};

JsexprContext.prototype.enterRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.enterJsexpr(this);
	}
};

JsexprContext.prototype.exitRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.exitJsexpr(this);
	}
};




cwlexParser.JsexprContext = JsexprContext;

cwlexParser.prototype.jsexpr = function() {

    var localctx = new JsexprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, cwlexParser.RULE_jsexpr);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 159;
        this.match(cwlexParser.OPENPAREN);
        this.state = 160;
        this.javascript();
        this.state = 161;
        this.match(cwlexParser.CLOSEPAREN);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function JsblockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cwlexParser.RULE_jsblock;
    return this;
}

JsblockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JsblockContext.prototype.constructor = JsblockContext;

JsblockContext.prototype.OPENBRACE = function() {
    return this.getToken(cwlexParser.OPENBRACE, 0);
};

JsblockContext.prototype.javascript = function() {
    return this.getTypedRuleContext(JavascriptContext,0);
};

JsblockContext.prototype.CLOSEBRACE = function() {
    return this.getToken(cwlexParser.CLOSEBRACE, 0);
};

JsblockContext.prototype.enterRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.enterJsblock(this);
	}
};

JsblockContext.prototype.exitRule = function(listener) {
    if(listener instanceof cwlexListener ) {
        listener.exitJsblock(this);
	}
};




cwlexParser.JsblockContext = JsblockContext;

cwlexParser.prototype.jsblock = function() {

    var localctx = new JsblockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, cwlexParser.RULE_jsblock);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 163;
        this.match(cwlexParser.OPENBRACE);
        this.state = 164;
        this.javascript();
        this.state = 165;
        this.match(cwlexParser.CLOSEBRACE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
